crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__import_nested_path_import.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: from very.deep.module.path import function
result: [
    Import(
        ImportStmt {
            path: [
                "very",
                "deep",
                "module",
                "path",
            ],
            item: "function",
            alias: None,
        },
    ),
]
