crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__import_simple_import.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: from std.math import add
result: [
    Import(
        ImportStmt {
            path: [
                "std",
                "math",
            ],
            item: "add",
            alias: None,
        },
    ),
]
