crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__invalid_binary_op_diagnostic.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entries
---
code: func test() { a +; }
result: [02] Error: found ';' expected something else, identifier, or '('
   ╭─[ invalid_binary_op:1:18 ]
   │
 1 │ func test() { a +; }
   │                  ┬  
   │                  ╰── found ';' expected something else, identifier, or '('
───╯
