crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__invalid_field_definition_diagnostic.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entries
---
code: struct Point { x, y: felt }
result: [02] Error: found ',' expected ':'
   ╭─[ invalid_field_definition:1:17 ]
   │
 1 │ struct Point { x, y: felt }
   │                 ┬  
   │                 ╰── found ',' expected ':'
───╯
