crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__invalid_if_condition_diagnostic.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entries
---
code: func test() { if { x = 1; } }
result: [02] Error: found '{' expected '('
   ╭─[ invalid_if_condition:1:18 ]
   │
 1 │ func test() { if { x = 1; } }
   │                  ┬  
   │                  ╰── found '{' expected '('
───╯
