crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__invalid_import_syntax_diagnostic.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entries
---
code: import std.math
result: [03] Error: found 'import' expected 'func', 'struct', 'from', 'const', 'namespace', or end of input
   ╭─[ <unknown>:1:1 ]
   │
 1 │ import std.math
   │ ───┬──  
   │    ╰──── found 'import' expected 'func', 'struct', 'from', 'const', 'namespace', or end of input
───╯
