crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__invalid_number_format_integration_diagnostic.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entries
---
code: func test() { let x = 0xGG; }
result: [01] Error: Invalid number '0xGG': Invalid number format
   ╭─[ <unknown>:1:23 ]
   │
 1 │ func test() { let x = 0xGG; }
   │                       ──┬─  
   │                         ╰─── Invalid number '0xGG': Invalid number format
───╯
