crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__invalid_parameter_diagnostic.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entries
---
code: func test(: felt) { }
result: [02] Error: found ':' expected identifier, or ')'
   ╭─[ <unknown>:1:11 ]
   │
 1 │ func test(: felt) { }
   │           ┬  
   │           ╰── found ':' expected identifier, or ')'
───╯
