crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__invalid_struct_literal.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: func test() { Point { x: 1, }; }
result: [
    Function(
        FunctionDef {
            name: "test",
            params: [],
            return_type: None,
            body: [
                Expression(
                    StructLiteral {
                        name: "Point",
                        fields: [
                            (
                                "x",
                                Literal(
                                    1,
                                ),
                            ),
                        ],
                    },
                ),
            ],
        },
    ),
]
