crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__invalid_toplevel_assignment_diagnostic.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entries
---
code: x = 10;
result: [02] Error: found 'x' expected 'func', 'struct', 'from', 'const', 'namespace', or end of input
   ╭─[ <unknown>:1:1 ]
   │
 1 │ x = 10;
   │ ┬  
   │ ╰── found 'x' expected 'func', 'struct', 'from', 'const', 'namespace', or end of input
───╯
