crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__invalid_toplevel_block_diagnostic.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entries
---
code: { let x = 1; }
result: [02] Error: found '{' expected 'func', 'struct', 'from', 'const', 'namespace', or end of input
   ╭─[ <unknown>:1:1 ]
   │
 1 │ { let x = 1; }
   │ ┬  
   │ ╰── found '{' expected 'func', 'struct', 'from', 'const', 'namespace', or end of input
───╯
