crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__invalid_toplevel_expression_diagnostic.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entries
---
code: 42;
result: [02] Error: found '42' expected 'func', 'struct', 'from', 'const', 'namespace', or end of input
   ╭─[ invalid_toplevel_expression:1:1 ]
   │
 1 │ 42;
   │ ─┬  
   │  ╰── found '42' expected 'func', 'struct', 'from', 'const', 'namespace', or end of input
───╯
